external-crates/move/crates/move-compiler/tests/move_2024/verification/spec_only_do_filter_dot_call.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
assertion_line: 276
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03009]: unbound variable
  ┌─ tests/move_2024/verification/spec_only_do_filter_dot_call.move:8:17
  │
8 │         let x = x.to_int();
  │                 ^ Unbound variable 'x'

warning[W09002]: unused variable
  ┌─ tests/move_2024/verification/spec_only_do_filter_dot_call.move:9:13
  │
9 │         let x = x.to_real();
  │             ^ Unused local variable 'x'. Consider removing or prefixing with an underscore: '_x'
  │
  = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')
